fix text handler for return articalreply

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,9 @@ encoding//werobot/reply.py=utf-8
 encoding//werobot/robot.py=utf-8
 encoding//werobot/session/filestorage.py=utf-8
 encoding//werobot/session/saekvstorage.py=utf-8
+encoding//werobot/tests/test_replay_artical.py=utf-8
 encoding//werobot/tests/test_reply.py=utf-8
+encoding//werobot/tests/test_robot.py=utf-8
+encoding//werobot/tests/test_session.py=utf-8
 encoding//werobot/utils.py=utf8
 encoding/setup.py=utf-8
